hphp/test/slow/readonly/basesc_unset_cow.php.expectf
string(40) "Readonly collections cannot be modified."
string(40) "Readonly collections cannot be modified."
string(92) "Property bad_c2 of class Foo is readonly, and therefore must be a value type to be modified."

Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'Property bad_c3 of class Foo is readonly, and therefore must be a value type to be modified.' in %s/basesc_unset_cow.php:29
%A
